--- a/home.html
+++ b/home.html
@@ -7,6 +7,14 @@
         Demo <small>1.2</small>
         </h1>
       </div>
+	  
+      <div class="list-group-item list-group-item-home">
+		<p><button class="btn btn-default" ng-click="alertDeviceInfo()">Device</button></p>
+		<p><button class="btn btn-default" ng-click="alertGeoLocation()">Location</button></p>
+		<p><button class="btn btn-default" ng-click="beepNotify()">Beep</button></p>
+		<p><button class="btn btn-default" ng-click="vibrateNotify()">Vibrate</button></p>
+      </div>	  
+	  
       <div class="list-group-item list-group-item-home">
         <div>
           <i class="fa fa-gamepad feature-icon text-primary"></i>
