--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
     >
 
     <!-- Sidebars -->
-    <div ng-include="'sidebar.html'" 
+    <div ng-include="'views/sidebar.html'" 
             ui-track-as-search-param='true'
             class="sidebar sidebar-left"></div>
 
-    <div ng-include="'sidebarRight.html'" 
+    <div ng-include="'views/sidebarRight.html'" 
             class="sidebar sidebar-right"></div>
 
     <div class="app" 
