--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script src="mobileangular/js/mobile-angular-ui.min.js"></script>
     <!-- Required to use $touch, $swipe, $drag and $translate services -->
     <script src="mobileangular/js/mobile-angular-ui.gestures.min.js"></script>
+	<script type="text/javascript" src="cordova.js"></script>
     <script src="demo.js"></script>
   </head>
 
